bridge/base/finance-api-service.yaml
# check if there is at least one published port

#! finance-api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: finance-api-published
    namespace: enterprise-finance-agent
    labels:
        com.docker.compose.project: enterprise_finance_agent
        com.docker.compose.service: finance-api
spec:
    selector:
        com.docker.compose.project: enterprise_finance_agent
        com.docker.compose.service: finance-api
    ports:
        - name: finance-ap-8000
          port: 8000
          protocol: TCP
          targetPort: finance-ap-8000
