bridge/base/default-network-policy.yaml
#! default-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: default-network-policy
    namespace: enterprise-finance-agent
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.default: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.default: "true"
